--- a/ux.html
+++ b/ux.html
@@ -42,7 +42,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/newrelic/job/o70tbfwv'>New Relic Careers - Associate UX Researcher</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Jobpal1/743999698665567-mid-ui-ux-designer'>jobpal Mid UI/UX Designer | SmartRecruiters</a></h5> 
@@ -61,7 +61,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8MUafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nc6zqMwy'>ServiceNow Careers - Staff UI/UX Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8MUafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nc6zqMwy'>ServiceNow Careers - Staff UI/UX Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-ux-designer-researcher-14081'>Senior UX Designer & Researcher - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-ux-designer-researcher-14081'>Senior UX Designer & Researcher - Experian Careers</a></h5> 
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4498252002'>Job Application for UX Designer at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4498252002'>Job Application for UX Designer at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -161,7 +161,7 @@
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://producthire.net/job/ux-designer-11/'>UX Designer | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-designer-11/'>UX Designer | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -169,7 +169,7 @@
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1935266'>Job Application for Senior UX Designer (m/w/div) at Dept</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935266'>Job Application for Senior UX Designer (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -275,7 +275,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -319,7 +319,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://helloprint.recruitee.com/l/nl/o/uiux-designer-internship-rotterdam'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/nl/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -353,7 +353,7 @@
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sugarcrm/job/oXAqbfwS'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -389,7 +389,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -447,7 +447,7 @@
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
+<h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
